src-tauri/build_errors3.txt
cargo :     Checking launcherg v0.0.0 (E:\Lau
ncherg-Mod\src-tauri)
発生場所 行:1 文字:1
+ cargo check 2>&1 | Out-File -FilePath build
_errors3.txt -Encoding utf ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified:  
   (    Checking la...-Mod\src-tauri):Strin  
  g) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandE 
   rror
 
warning: unused import: `SetCursorPos`
  --> src\infrastructure\windowsimpl\scaling\
cursor.rs:13:53
   |
13 |     GetWindowLongW, GetWindowRect, IsWin
dowVisible, SetCursorPos, SetWindowLongW,
   |                                         
            ^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by de
fault

warning: unnecessary parentheses around funct
ion argument
   --> src\infrastructure\windowsimpl\scaling
\cursor_renderer.rs:386:46
    |
386 |             let mut final_pixels = vec!
[0u8; (width as usize * height as usize * 4)]
;
    |                                        
      ^                                    ^
    |
    = note: `#[warn(unused_parens)]` on by de
fault
help: remove these parentheses
    |
386 -             let mut final_pixels = vec!
[0u8; (width as usize * height as usize * 4)]
;
386 +             let mut final_pixels = vec!
[0u8; width as usize * height as usize * 4];
    |

warning: unused import: `DXGI_ALPHA_MODE_PREM
ULTIPLIED`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:23:29
   |
23 |     DXGI_ALPHA_MODE_IGNORE, DXGI_ALPHA_M
ODE_PREMULTIPLIED, DXGI_FORMAT_B8G8R8A8_UNORM
,
   |                             ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^

warning: unused imports: `DWMWA_EXTENDED_FRAM
E_BOUNDS`, `DWMWA_NCRENDERING_ENABLED`, and `
DwmGetWindowAttribute`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:26:37
   |
26 | use windows::Win32::Graphics::Dwm::{DwmG
etWindowAttribute, DWMWA_EXTENDED_FRAME_BOUND
S, DWMWA_NCRENDERING_ENABLED};
   |                                     ^^^^
^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^
^  ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `GetMessageW`, `Post
QuitMessage`, and `TranslateMessage`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:42:23
   |
42 |     DispatchMessageW, GetMessageW, PeekM
essageW, PostQuitMessage, TranslateMessage, M
SG, PM_REMOVE,
   |                       ^^^^^^^^^^^       
         ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^

warning: unused import: `windows::Win32::Grap
hics::Direct2D::Common::D2D_POINT_2F`
  --> src\infrastructure\windowsimpl\scaling\
processor.rs:46:5
   |
46 | use windows::Win32::Graphics::Direct2D::
Common::D2D_POINT_2F;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `ID2D1RenderTarget` 
and `ID2D1SolidColorBrush`
 --> src\infrastructure\windowsimpl\scaling\t
oolbar.rs:4:38
  |
4 |     D2D1CreateFactory, ID2D1Factory, ID2D
1RenderTarget, ID2D1SolidColorBrush,
  |                                      ^^^^
^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\infrastructure\windowsimpl\scaling
\cursor.rs:478:32
    |
478 |             let _ = ClipCursor(&origin_
clip);
    |                     ---------- ^^^^^^^^
^^^^ expected `Option<*const RECT>`, found `&
RECT`
    |                     |
    |                     arguments to this f
unction are incorrect
    |
    = note:   expected enum `std::option::Opt
ion<*const RECT>`
            found reference `&RECT`
note: function defined here
   --> C:\Users\nnnma\.cargo\registry\src\ind
ex.crates.io-1949cf8c6b5b557f\windows-0.51.1\
src\Windows\Win32\UI\WindowsAndMessaging\mod.
rs:394:15
    |
394 | pub unsafe fn ClipCursor(lprect: ::core
::option::Option<*const super::super::Foundat
ion::RECT>) -> ::windows_core::Result<()> {
    |               ^^^^^^^^^^
help: try wrapping the expression in `Some`
    |
478 |             let _ = ClipCursor(Some(&or
igin_clip));
    |                                +++++   
         +

warning: unused variable: `src_rect`
   --> src\infrastructure\windowsimpl\scaling
\cursor.rs:312:37
    |
312 |     fn update_cursor_pos(&mut self, src
_rect: RECT, dest_rect: RECT) {
    |                                     ^^^
^^^^^ help: if this is intentional, prefix it
 with an underscore: `_src_rect`
    |
    = note: `#[warn(unused_variables)]` on by
 default

warning: unused variable: `dest_rect`
   --> src\infrastructure\windowsimpl\scaling
\cursor.rs:312:53
    |
312 |     fn update_cursor_pos(&mut self, src
_rect: RECT, dest_rect: RECT) {
    |                                        
             ^^^^^^^^^ help: if this is inten
tional, prefix it with an underscore: `_dest_
rect`

warning: variable does not need to be mutable
   --> src\infrastructure\windowsimpl\scaling
\overlay.rs:368:17
    |
368 |             let mut fps_vertex_start = 
vertices.len();
    |                 ----^^^^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by defau
lt

warning: unused variable: `window_kind`
   --> src\infrastructure\windowsimpl\scaling
\processor.rs:445:57
    |
445 | ...                   let window_kind =
 src_tracker.get_window_kind();
    |                           ^^^^^^^^^^^ h
elp: if this is intentional, prefix it with a
n underscore: `_window_kind`

For more information about this error, try `r
ustc --explain E0308`.
warning: `launcherg` (bin "launcherg") genera
ted 11 warnings
error: could not compile `launcherg` (bin "la
uncherg") due to 1 previous error; 11 warning
s emitted
